fix chart colors in dark mode

--- a/style.css
+++ b/style.css
@@ -505,7 +505,7 @@ svg {
   height: 210px;
 }
 .bar-container {
-  height: 260px;
+  height: 265px;
 }
 .chart-container canvas {
   max-width: 100%;
